--- a/src/elements/PageElement/PageElement.html
+++ b/src/elements/PageElement/PageElement.html
@@ -1,2 +1,2 @@
-<slot name="title"></slot> <button></button>
+<text-element title id="label"></text-element> <a id="link"></a>
 <div id="childHolder"><slot name="pages" id="pages"></slot> <slot></slot></div>
