add module element

--- a/src/index.html
+++ b/src/index.html
@@ -8,20 +8,34 @@
     <page-element id="a" name="A" selected>
       <page-element slot="pages" id="a.b" name="ONE">
         <page-element slot="pages" id="a.b.c" name="a">
-          <page-element slot="pages" id="a.b.c.i" name="one"></page-element>
+          <page-element slot="pages" id="a.b.c.i" name="one">
+            <big-bang-element slot="content"></big-bang-element>
+          </page-element>
 
-          <page-element slot="pages" id="a.b.c.ii" name="two"></page-element>
+          <page-element slot="pages" id="a.b.c.ii" name="two">
+            <big-bang-element slot="content"></big-bang-element>
+          </page-element>
 
-          <page-element slot="pages" id="a.b.c.iii" name="three"></page-element>
+          <page-element slot="pages" id="a.b.c.iii" name="three">
+            <big-bang-element slot="content"></big-bang-element
+          ></page-element>
         </page-element>
 
-        <page-element slot="pages" id="a.b.i" name="b"></page-element>
+        <page-element slot="pages" id="a.b.i" name="b">
+          <big-bang-element slot="content"></big-bang-element>
+        </page-element>
 
-        <page-element slot="pages" id="a.b.ii" name="c"></page-element>
+        <page-element slot="pages" id="a.b.ii" name="c">
+          <big-bang-element slot="content"></big-bang-element>
+        </page-element>
 
-        <page-element slot="pages" id="a.b.iii" name="d"></page-element>
+        <page-element slot="pages" id="a.b.iii" name="d">
+          <big-bang-element slot="content"></big-bang-element>
+        </page-element>
 
-        <page-element slot="pages" id="a.b.iv" name="e"></page-element>
+        <page-element slot="pages" id="a.b.iv" name="e">
+          <big-bang-element slot="content"></big-bang-element>
+        </page-element>
       </page-element>
     </page-element>
   </body>
