--- a/src/elements/PageElement/PageElement.html
+++ b/src/elements/PageElement/PageElement.html
@@ -1,4 +1,4 @@
-<text-element title id="label"></text-element> <a id="link"></a>
-<div id="childHolder">
-  <slot name="pages" id="pages"></slot> <slot name="content"></slot>
-</div>
+<div id="childHolder"><slot name="pages" id="pages"></slot></div>
+<slot name="content" id="content"></slot>
+<text-element title id="label"></text-element>
+<a id="link"></a>
