--- a/src/index.html
+++ b/src/index.html
@@ -13,28 +13,29 @@
           </page-element>
 
           <page-element slot="pages" id="a.b.c.ii" name="two">
-            <big-bang-element slot="content"></big-bang-element>
+            <!-- <big-bang-element slot="content"></big-bang-element> -->
           </page-element>
 
           <page-element slot="pages" id="a.b.c.iii" name="three">
-            <big-bang-element slot="content"></big-bang-element
-          ></page-element>
+            <!-- <big-bang-element slot="content"></big-bang-element -->
+            ></page-element
+          >
         </page-element>
 
         <page-element slot="pages" id="a.b.i" name="b">
-          <big-bang-element slot="content"></big-bang-element>
+          <!-- <big-bang-element slot="content"></big-bang-element> -->
         </page-element>
 
         <page-element slot="pages" id="a.b.ii" name="c">
-          <big-bang-element slot="content"></big-bang-element>
+          <!-- <big-bang-element slot="content"></big-bang-element> -->
         </page-element>
 
         <page-element slot="pages" id="a.b.iii" name="d">
-          <big-bang-element slot="content"></big-bang-element>
+          <!-- <big-bang-element slot="content"></big-bang-element> -->
         </page-element>
 
         <page-element slot="pages" id="a.b.iv" name="e">
-          <big-bang-element slot="content"></big-bang-element>
+          <!-- <big-bang-element slot="content"></big-bang-element> -->
         </page-element>
       </page-element>
     </page-element>
