--- a/src/elements/modules/BigBangElement/BigBangElement.html
+++ b/src/elements/modules/BigBangElement/BigBangElement.html
@@ -1,4 +1,5 @@
-<canvas></canvas>
+<universe-element></universe-element>
+<scroll-capture-element></scroll-capture-element>
 <form>
   <text-element>
     <table>
@@ -9,7 +10,7 @@
             id="totalMass"
             max="100000"
             min="100"
-            value="10000"
+            value="60000"
           ></slider-element>
         </td>
       </tr>
@@ -20,7 +21,7 @@
             id="maxMass"
             max="5000"
             min="50"
-            value="500"
+            value="400"
           ></slider-element>
         </td>
       </tr>
