make radio-holder-element

--- a/src/elements/modules/BigBangElement/BigBangElement.html
+++ b/src/elements/modules/BigBangElement/BigBangElement.html
@@ -21,25 +21,16 @@
   </label>
   <label>
     <text-element>Include antimatter:</text-element>
-    <div>
+    <radio-holder-element id="antimatter">
       <label>
-        <radio-element
-          checked
-          id="antimatterNo"
-          name="antimatter"
-          value="no"
-        ></radio-element>
+        <radio-element checked value="false"></radio-element>
         <text-element>No</text-element>
       </label>
       <label>
-        <radio-element
-          id="antimatterYes"
-          name="antimatter"
-          value="yes"
-        ></radio-element>
+        <radio-element value="true"></radio-element>
         <text-element>Yes</text-element>
       </label>
-    </div>
+    </radio-holder-element>
   </label>
   <label>
     <text-element>Speed:</text-element>
