--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <tree-branch name="test" selected>
-      <tree-branch slot="branches" name="experimentation">
+      <tree-branch slot="branches" name="experiments">
         <tree-branch slot="branches" name="big bang">
           <demo-big-bang slot="content"></demo-big-bang>
         </tree-branch>
